--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,8 @@ cmake-build-*/
 # IntelliJ
 out/
 .idea
-/src/main/resources/application.properties
 /build
+.env
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
