docker compose 컨테이너 이름 오타 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   springboot:
     image: openjdk:20-jdk-slim
-    container_name: seoulbike-springboot
+    container_name: fromis_9-springboot
     expose:
       - "8080"
     working_dir: /app
