--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
-spring.data.redis.host=fromis_9-redis
-spring.data.redis.port=6379
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
 
 fast.api.url=${FAST_API_URL}
 
